# sla-test-client

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust-check.yml
client/: Cargo.toml
client/src/: client.rs  config.rs  main.rs  metrics.rs  record.rs
common/: Cargo.toml
common/src/: lib.rs  log.rs  signal.rs  time.rs  toml.rs
config/: client-deployment.yaml  client-log4rs.yaml  client.toml
src/: client.rs  config.rs  main.rs  metrics.rs  record.rs  time.rs
storage/: Cargo.toml
storage/derive/: Cargo.toml
storage/derive/src/: lib.rs
storage/src/: lib.rs  mdbx.rs  sledb.rs
