[package]
name = "client"
version = "0.1.8"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
common-rs = { git = "https://github.com/cita-cloud-cache/common-rs", default-features = false, features = [
    "restful",
    "consul",
    "config",
] }

anyhow = "1.0"
axum = "0.6"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
parking_lot = "0.12"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage_dal = "0.3"
tokio = { version = "1.34", features = ["rt-multi-thread", "time", "macros"] }
tracing = "0.1"
