[package]
name = "client"
version = "0.3.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
common-rs = { git = "https://github.com/cita-cloud-cache/common-rs", default-features = false, features = [
    "restful",
    "consul",
    "config",
] }

chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
flume = "0.11"
heck = "0.4"
parking_lot = "0.12"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
salvo = "0.64"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage_dal = "0.3"
tokio = { version = "1.35", features = ["rt-multi-thread", "time", "macros"] }
tracing = "0.1"

[lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"
