[package]
name = "client"
version = "0.1.1"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
common = { path = "../common" }
storage = { path = "../storage" }
storage_derive = { path = "../storage/derive" }

tokio = { version = "1.21", features = ["rt-multi-thread", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
log4rs = { version = "1.2", features = ["gzip"] }
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
