[package]
name = "client"
version = "0.1.7"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
common = { path = "../common" }
storage = { path = "../storage" }
storage_derive = { path = "../storage/derive" }

tokio = { version = "1.28", features = ["rt-multi-thread", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.3", features = ["derive"] }
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
