[package]
name = "common"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
storage = { path = "../storage" }

serde = {version = "1", features = ["derive"]}
toml = "0.5"
log = "0.4"
futures = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
