[package]
name = "common"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
storage = { path = "../storage" }

serde = {version = "1", features = ["derive"]}
toml = "0.7"
futures = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
md5 = "0.7"
chrono = "0.4"
