[package]
name = "storage"
version = "0.1.0"
authors = ["JLer <jlerxky@live.com>"]
edition = "2021"
categories = ["game"]
homepage = "https://www.theprimestar.com"
keywords = ["game", "bevy"]
readme = "README.md"
repository = "https://github.com/JLerxky/the_prime_island/storage"

[dependencies]
libmdbx = "0.1"
sled = "0.34"
serde = {version = "1", features = ["derive"]}
bincode = "1.3"
